fix color contrast

--- a/src/_scss/pages/covid19/index.scss
+++ b/src/_scss/pages/covid19/index.scss
@@ -92,7 +92,8 @@
                         }
                     }
                     .query-matched {
-                        background-color: $color-gold;
+                        font-weight: $font-semibold;
+                        text-decoration: underline;
                     }
                 }
             }
